force-app/main/default/objects/Integration_Credential_Key_Pair__mdt/Integration_Credential_Key_Pair__mdt.object-meta.xml
<CustomObject>
    <label>Integration Credential Key Pair</label>
    <pluralLabel>Integration Credential Key Pairs</pluralLabel>
</CustomObject>