force-app/main/default/objects/Integration_Credential_Key_Pair__mdt/fields/Include_in_Body__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Body__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Body ?</label>
    <type>Checkbox</type>
</CustomField>