force-app/main/default/objects/Integration_Credential_Key_Pair__mdt/fields/Include_in_Header__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Header ?</label>
    <type>Checkbox</type>
</CustomField>