force-app/main/default/objects/Integration_Credential_Key_Pair__mdt/fields/Include_In_Param__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Param__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Param ?</label>
    <type>Checkbox</type>
</CustomField>