force-app/main/default/objects/Integration_Credential_Key_Pair__mdt/fields/Integration_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Integration_Authorization__c</fullName>
    <label>Integration Authorization</label>
    <referenceTo>Integration_Authorization__mdt</referenceTo>
    <relationshipLabel>Integration Credential Key Pairs</relationshipLabel>
    <relationshipName>Integration_Credential_Key_Pairs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>